# NEXUS

./: .env.example  .gitignore  .gitleaks.toml  .trivyignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  auth.py  models.txt  pattern_engine.py  pyproject.toml  pytest.ini  requirements-base.txt  requirements-browser.txt  requirements-desktop.txt  requirements-voice.txt  requirements.txt  rust_test_output.txt  web_gui.py  zeus.service
.codeviz/Untitled 1/: Untitled-1.drawio
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ai-stack.yml  browser-stack.yml  ci.yml  codeql.yml  python.yml  (+4 more)
apps/: lifecycle_manager.py  nexus_evolution.py  nexus_v4.py  plasma_chat.py  realtime_hub.py  status_routes.py  web_gui.py  zeus_evolution.py  zeus_v4.py
backend/: Cargo.toml  nexus_backend.db-shm  nexus_backend.db-wal
backend/src/: main.rs
backend/src/approvals/: mod.rs
backend/src/events/: mod.rs
backend/src/execution/: command.rs  graph.rs  mod.rs  patch.rs  risk.rs  test.rs
backend/src/filesystem/: mod.rs
backend/src/gateway/: mod.rs
backend/src/llm/: mod.rs
backend/src/state/: mod.rs
backend/src/storage/: mod.rs
backend/src/telemetry/: mod.rs
backend/src/workers/: mod.rs
cognitive-python/: rust_connect.py
communication/: build_proto.py  nexus_core.proto  voice_service.py  zeus_core.proto
config/: nexus.env.example
configs/: README.md  cert.pem  identity.json  key.pem  permissions.toml
core-rust/: Cargo.toml  build.rs
core-rust/nexus_cognitive/: Cargo.toml
core-rust/nexus_cognitive/src/: lib.rs
core-rust/nexus_memory/: Cargo.toml
core-rust/nexus_memory/src/: lib.rs  main.rs
core-rust/nexus_patterns/: Cargo.toml
core-rust/nexus_patterns/src/: lib.rs
core-rust/nexus_policy/: Cargo.toml
core-rust/nexus_policy/src/: lib.rs
core-rust/nexus_security/: Cargo.toml
core-rust/nexus_security/src/: lib.rs
core-rust/nexus_sensors/: Cargo.toml
core-rust/nexus_sensors/src/: lib.rs
core-rust/nexus_state/: Cargo.toml
core-rust/nexus_state/src/: lib.rs
core-rust/nexus_synapse/: Cargo.toml
core-rust/nexus_synapse/src/: lib.rs
core-rust/nexus_sync/: Cargo.toml
core-rust/nexus_sync/src/: lib.rs
core-rust/src/: main.rs
core-rust/zeus_cognitive/: Cargo.toml
core-rust/zeus_cognitive/src/: lib.rs
core-rust/zeus_memory/: Cargo.toml
core-rust/zeus_memory/src/: lib.rs  main.rs
core-rust/zeus_patterns/: Cargo.toml
core-rust/zeus_patterns/src/: lib.rs
core-rust/zeus_policy/: Cargo.toml
core-rust/zeus_policy/src/: lib.rs
core-rust/zeus_security/: Cargo.toml
core-rust/zeus_security/src/: lib.rs
core-rust/zeus_sensors/: Cargo.toml
core-rust/zeus_sensors/src/: lib.rs
core-rust/zeus_state/: Cargo.toml
core-rust/zeus_state/src/: lib.rs
core-rust/zeus_synapse/: Cargo.toml
core-rust/zeus_synapse/src/: lib.rs
core-rust/zeus_sync/: Cargo.toml
core-rust/zeus_sync/src/: lib.rs
core_modules/: nexus_core_v3.py
docs/: ANALISE_SISTEMA_DETALHADA.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLOWCHART.md  INSTALL.md  MODULE_CLASSIFICATION.md  NEXUS_REPOSITORY_REPORT.md  NEXUS_SECOND_BRAIN_ARCHITECTURE.md  PACKAGE.md  PLANO_APPLET_GTK_2026-05-03.md  PLANO_EXECUCAO_ZEUS_2026-05-02.md  RELATORIO_COMPLETO_SISTEMA_2026-05-03.md  RELATORIO_COMPLETO_SISTEMA_2026-05-05.md  RELATORIO_COMPLETO_SISTEMA_2026-05-06.md  RELATORIO_COMPLETO_SISTEMA_2026-05-08.md  RELATORIO_SISTEMA_2026-05-02.md  RUNTIME.md  RUST_MIGRATION_PLAN.md  SECURITY.md  SYSTEM_DETAILS.md  ZEUS_SECOND_BRAIN_ARCHITECTURE.md  system_architecture_report.md
memory/: long_term.json
nexus-iced/: Cargo.toml
nexus-iced/src/: main.rs  websocket.rs
nexus_core/: actions.py  agent.py  asr.py  boot_diagnostics.py  browser_control.py  command_policy.py  config_guard.py  core_system.py  execution_engine.py  execution_protocol.py  executive_agent.py  executor.py  health_status.py  learning_engine.py  llm_service.py  memory_hierarchy.py  memory_manager.py  nexus_core_v3.py  observability.py  path_filters.py  planner.py  product_cli.py  recovery_engine.py  response_text.py  rust_sensors.py  security_guard.py  simulation_layer.py  skill_engine.py  synaptic_sync.py  tools.py  vector_memory.py  vision.py  voice_sensing.py  zeus_core_v3.py
public/: android.html  brain_gui.html  index.html  manifest.json  mobile.html  sw.js
requirements/: ai.txt  base.txt  browser.txt  dev.txt  voice.txt
scratch/: rust_demo.py  test_chromadb.py  test_gemini.py
scripts/: bootstrap.sh  build_sidecar.sh  dev-check.sh  generate_repository_report.py  mirror_os_to_obsidian.py  nexus.service
skills/: system_guardian.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test_db/: chroma.sqlite3
tests/: conftest.py  test_agent_feedback.py  test_backend_regressions.py  test_cognition_routes.py  test_cognitive_execution.py  test_cognitive_loop.py  test_cognitive_state.py  test_command_policy.py  test_config_guard.py  test_conversation_memory.py  test_filesystem_mirror.py  test_memory_compression.py  test_observability.py  test_path_filters.py  test_realtime_hub.py  test_root_daemon.py  test_second_brain.py  test_security_guard.py  test_self_healing.py  test_status_routes.py  test_usb_monitor.py
tools/: cleanup_workspace.sh  migrate_synaptic_memory_paths.py
watcher_rs/: Cargo.toml
watcher_rs/src/: main.rs
zeus_core/: __init__.py  actions.py  actions_registry.py  agent.py  asr.py  browser_control.py  command_policy.py  config_guard.py  core_system.py  diagnostics.py  env.py  event_pipeline.py  execution_engine.py  executive_agent.py  executor.py  health_status.py  learning_engine.py  llm_service.py  long_term_memory.py  memory_hierarchy.py  memory_manager.py  observability.py  path_filters.py  planner.py  recovery_engine.py  resource_control.py  response_text.py  rust_sensors.py  security_guard.py  simulation_layer.py  tools.py  vector_memory.py  vision.py  voice_sensing.py  zeus_core_v3.py
zeus_extension/: pubspec.yaml
(+265 files in other folders)
