[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"

# Web / API
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# State & Concurrency
dashmap = "5.5"
crossbeam-channel = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "uuid"] }

# Filesystem / Utility
notify = "6.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
async-stream = "0.3"
futures = "0.3"
similar = "3.1.0"
