[package]
name = "zeus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "5.0"
log = "0.4"
env_logger = "0.11"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"

