[package]
name = "nexus-shell"
version = "0.1.0"
description = "NEXUS Unified Shell"
authors = ["NEXUS Protocol"]
edition = "2021"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
# by default Tauri runs in production mode
# check `tauri.conf.json > tauri > bundle > identifier`
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
