[package]
name = "watcher_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
sysinfo = "0.30"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
