[package]
name = "watcher_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
tokio = { version = "1.52", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
sysinfo = "0.39"
dotenv = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
