[package]
name = "nexus_memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_memory"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "memory_service"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rayon = "1.8"
bincode = "3.0"

[features]
extension-module = ["pyo3/extension-module"]
