[package]
name = "nexus_patterns"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_patterns"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
extension-module = ["pyo3/extension-module"]
