[package]
name = "nexus_security"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_security"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["auto-initialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
extension-module = ["pyo3/extension-module"]
