[package]
name = "nexus_state"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_state"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arc-swap = "1.6"

[features]
extension-module = ["pyo3/extension-module"]
