[package]
name = "nexus_sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_sync"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
extension-module = ["pyo3/extension-module"]
