[package]
name = "zeus_cognitive"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_cognitive"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
