[package]
name = "zeus_cognitive"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_cognitive"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
extension-module = ["pyo3/extension-module"]
