[package]
name = "zeus_memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_memory"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "memory_service"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
rayon = "1.8"
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
