[package]
name = "zeus_memory"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_memory"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "memory_service"
path = "src/main.rs"

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rayon = "1.8"
bincode = "1.3"

[features]
extension-module = ["pyo3/extension-module"]
