[package]
name = "zeus_policy"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_policy"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[features]
extension-module = ["pyo3/extension-module"]
