[package]
name = "zeus_sensors"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_sensors"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }
walkdir = "2.4"
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
