[package]
name = "zeus_state"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_state"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arc-swap = "1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
