[package]
name = "zeus_synapse"
version = "0.1.0"
edition = "2021"

[lib]
name = "zeus_synapse"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
extension-module = ["pyo3/extension-module"]
